🔧 Overflow and placeholder text fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,6 +5,7 @@ html, body {
   padding: 0;
   margin: 0;
   background: $bg;
+  overflow-x: hidden;
   @include default_font;
 }
 
